--- a/sistemas-distribuidos/trab-bet-grpc/package.json
+++ b/sistemas-distribuidos/trab-bet-grpc/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@grpc/grpc-js": "^1.3.0",
     "@grpc/proto-loader": "^0.6.1",
     "grpc": "^1.24.7",
